# bilingual-slide-study-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  demo.html
scripts/: build_review_page.py  prepare_ppt_review_assets.py
skills/course-ppt-review-html/: SKILL.md
skills/course-ppt-review-html/agents/: openai.yaml
skills/course-ppt-review-html/references/: review-page-criteria.md
skills/course-ppt-review-html/scripts/: build_review_page.py  prepare_ppt_review_assets.py
templates/: visual-card.html
tests/: test_build_review_page.py  test_prepare_ppt_review_assets.py
